# places

./: .cursorignore  .dockerignore  .env  .env.example  .gitignore  CHANGELOG_ENRICHMENT.md  Cargo.toml  Dockerfile  ENRICHMENT_MAPPING.md  IMPLEMENTATION_SUMMARY.md  POPULATE_GUIDE.md  QUICKSTART.md  QUICK_START_POPULATE.md  README.md  populate_zaragoza.py  requirements-populate.txt  run_migrations.sh  run_populate.sh
.github/workflows/: deploy.yml
migrations/: 001_create_places.sql  002_create_search_index.sql  003_create_audit_tables.sql  004_create_photos_table.sql  005_adjust_google_rating_type.sql  006_enrich_places_fields.sql  007_fix_review_rating_type.sql
src/: errors.rs  main.rs
src/config/: db.rs  env.rs  mod.rs
src/db/: mod.rs  photo_repository.rs  repository.rs  review_repository.rs
src/handlers/: admin.rs  health.rs  mod.rs  places.rs
src/models/: mod.rs  photo.rs  place.rs  review.rs
src/services/: cache.rs  google_places_client.rs  grid_generator.rs  mod.rs  place_service.rs  sync_service.rs
